# cpp_skeleton

./: .gitignore  CMakeLists.txt  README.md
include/module_1/: module_1.hpp
src/: CMakeLists.txt  main.cpp
src/module_1/: CMakeLists.txt  module_1.cpp
test/: CMakeLists.txt  test_main.cpp
test/module_1/: CMakeLists.txt  module_1_tests.cpp
test/module_2/: CMakeLists.txt  module_2_tests.cpp
